--- a/SogetiStaffingPlanner/Views/Opportunity/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Opportunity/Index.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 <head>
@@ -16,134 +14,139 @@
         <div v-if="moreState === false">
             <h2>Opportunity List</h2>
             <hr />
-            <div v-if="addState === false" class="addButton">
-                <button v-on:click="add" class="btn btn-primary">
-                    <i class="fa fa-pencil"></i> Add Opportunity
-                </button>
-                <div class="form-group"></div>
-            </div>
-            <template v-else>
-                <div class="addButton">
-                    <div class="form-horizontal">
-                        <div class="form-group"></div>
-                        <div class="col-sm-6">
-                            <label class="col-sm-4">Opportunity Name: </label>
-                            <div class="col-sm-8">
-                                <input class="form-control" type="text" v-model="opportunityName" />
-                                <span class="error">{{ errors.opportunityName }}</span>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <label class="col-sm-4">Client: </label>
-                            <div class="col-sm-8">
-                                <select class="form-control" v-model="clientId">
-                                    <option v-for="client in clients" :value="client.ClientId" class="form-control">
-                                        {{ client.ClientName }}: {{ client.ClientSubbusiness }}
-                                    </option>
-                                </select>
-                                <span class="error">{{ errors.clientId }}</span>
-                            </div>
-                        </div>
-
-                        <div class="form-group"></div>
-                        <div class="col-sm-6">
-                            <label class="col-sm-4">Client Contact: </label>
-                            <div class="col-sm-8">
-                                <input class="form-control" type="text" v-model="clientContact" />
-                                <span class="error">{{ errors.clientContact }}</span>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-6">
-                            <label class="col-sm-4">Account Executive: </label>
-                            <div class="col-sm-8">
-                                <select class="form-control" v-model="accountExecutiveUserId">
-                                    <option v-for="ae in aes" :value="ae.UserId">{{ ae.FullName }}</option>
-                                </select>
-                                <span class="error">{{ errors.accountExecutiveUserId }}</span>
-                            </div>
-                        </div>
-
-                        <div class="form-group"></div>
-                        <div class="col-sm-6">
-                            <label class="col-sm-4">Unit: </label>
-                            <div class="col-sm-8">
-                                <select class="form-control" v-model="unitId">
-                                    <option v-for="unit in units" :value="unit.UnitId">{{ unit.UnitName }}</option>
-                                </select>
-                                <span class="error">{{ errors.unitId }}</span>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-6">
-                            <label class="col-sm-4">Region: </label>
-                            <div class="col-sm-8">
-                                <select class="form-control" v-model="regionId">
-                                    <option v-for="region in regions" :value="region.RegionId">{{ region.RegionName }}</option>
-                                </select>
-                                <span class="error">{{ errors.regionId }}</span>
-                            </div>
-                        </div>
-
-                        <div class="form-group"></div>
-
-                        <div class="col-sm-6">
-                            <label class="col-sm-4">Sold Status: </label>
-                            <div class="col-sm-8">
-                                <select class="form-control" v-model="soldStatusId">
-                                    <option v-for="soldStatus in soldStatuses" :value="soldStatus.SoldStatusId">{{ soldStatus.SoldStatusName }}</option>
-                                </select>
-                                <span class="error">{{ errors.soldStatusId }}</span>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-6">
-                            <label class="col-sm-4">Opportunity Owner: </label>
-                            <div class="col-sm-8">
-                                <select class="form-control" v-model="opportunityOwnerUserId">
-                                    <option v-for="ACTLead in ACTLeads" :value="ACTLead.UserId">{{ ACTLead.FullName }}</option>
-                                </select>
-                                <span class="error">{{ errors.opportunityOwnerUserId }}</span>
-                            </div>
-                        </div>
-
-                        <div class="form-group"></div>
-                        <div class="col-sm-6">
-                            <label class="col-sm-4">Opportunity Notes: </label>
-                            <div class="col-sm-8">
-                                <textarea class="form-control" type="text" v-model="opportunityNotes">
-                                    </textarea>
-                                <span class="error">{{ errors.opportunityNotes }}</span>
-                            </div>
-                        </div>
-                        <!--<template v-if="updateState">
-                            <div class="col-sm-6">
-                                <label class="col-sm-4">Active: </label>
-                                <div class="col-sm-8">
-                                    <button class="btn btn-default" v-on:click="active = !active">
-                                        <div v-if="active">
-                                            <i class="fa fa-thumbs-up"> Active</i>
-                                        </div>
-                                        <template v-else>
-                                            <i class="fa fa-thumbs-down"> Inactive</i>
-                                        </template>
-                                    </button>
-                                </div>
-
-                            </div>
-                        </template>-->
-
-                        <div class="form-group"></div>
-                        <div class="col-sm-6">
-                            <button class="btn btn-primary" v-on:click="onSubmit" :disabled="isDisabled"><i class="fa fa-pencil"></i> {{ updateState ? 'Update' : 'Add'}}</button>
-                            <button class="btn btn-danger" v-on:click="clearForm"><i class="fa fa-times"></i> Cancel</button>
-                        </div>
-
-                        <div class="form-group"></div>
-                    </div>
+            <div class="row addButton">
+                <div v-if="addState === false" class="col-md-3">
+                    <button v-on:click="add" class="btn btn-primary">
+                        <i class="fa fa-pencil"></i> Add Opportunity
+                    </button>
+                    <div class="form-group"></div>
                 </div>
-            </template>
+                <template v-else>
+                    <div class="addButton">
+                        <div class="form-horizontal">
+                            <div class="form-group"></div>
+                            <div class="col-sm-6">
+                                <label class="col-sm-4">Opportunity Name: </label>
+                                <div class="col-sm-8">
+                                    <input class="form-control" type="text" v-model="opportunityName" />
+                                    <span class="error">{{ errors.opportunityName }}</span>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <label class="col-sm-4">Client: </label>
+                                <div class="col-sm-8">
+                                    <select class="form-control" v-model="clientId">
+                                        <option v-for="client in clients" :value="client.ClientId" class="form-control">
+                                            {{ client.ClientName }}: {{ client.ClientSubbusiness }}
+                                        </option>
+                                    </select>
+                                    <span class="error">{{ errors.clientId }}</span>
+                                </div>
+                            </div>
 
+                            <div class="form-group"></div>
+                            <div class="col-sm-6">
+                                <label class="col-sm-4">Client Contact: </label>
+                                <div class="col-sm-8">
+                                    <input class="form-control" type="text" v-model="clientContact" />
+                                    <span class="error">{{ errors.clientContact }}</span>
+                                </div>
+                            </div>
+
+                            <div class="col-sm-6">
+                                <label class="col-sm-4">Account Executive: </label>
+                                <div class="col-sm-8">
+                                    <select class="form-control" v-model="accountExecutiveUserId">
+                                        <option v-for="ae in aes" :value="ae.UserId">{{ ae.FullName }}</option>
+                                    </select>
+                                    <span class="error">{{ errors.accountExecutiveUserId }}</span>
+                                </div>
+                            </div>
+
+                            <div class="form-group"></div>
+                            <div class="col-sm-6">
+                                <label class="col-sm-4">Unit: </label>
+                                <div class="col-sm-8">
+                                    <select class="form-control" v-model="unitId">
+                                        <option v-for="unit in units" :value="unit.UnitId">{{ unit.UnitName }}</option>
+                                    </select>
+                                    <span class="error">{{ errors.unitId }}</span>
+                                </div>
+                            </div>
+
+                            <div class="col-sm-6">
+                                <label class="col-sm-4">Region: </label>
+                                <div class="col-sm-8">
+                                    <select class="form-control" v-model="regionId">
+                                        <option v-for="region in regions" :value="region.RegionId">{{ region.RegionName }}</option>
+                                    </select>
+                                    <span class="error">{{ errors.regionId }}</span>
+                                </div>
+                            </div>
+
+                            <div class="form-group"></div>
+
+                            <div class="col-sm-6">
+                                <label class="col-sm-4">Sold Status: </label>
+                                <div class="col-sm-8">
+                                    <select class="form-control" v-model="soldStatusId">
+                                        <option v-for="soldStatus in soldStatuses" :value="soldStatus.SoldStatusId">{{ soldStatus.SoldStatusName }}</option>
+                                    </select>
+                                    <span class="error">{{ errors.soldStatusId }}</span>
+                                </div>
+                            </div>
+
+                            <div class="col-sm-6">
+                                <label class="col-sm-4">Opportunity Owner: </label>
+                                <div class="col-sm-8">
+                                    <select class="form-control" v-model="opportunityOwnerUserId">
+                                        <option v-for="ACTLead in ACTLeads" :value="ACTLead.UserId">{{ ACTLead.FullName }}</option>
+                                    </select>
+                                    <span class="error">{{ errors.opportunityOwnerUserId }}</span>
+                                </div>
+                            </div>
+
+                            <div class="form-group"></div>
+                            <div class="col-sm-6">
+                                <label class="col-sm-4">Opportunity Notes: </label>
+                                <div class="col-sm-8">
+                                    <textarea class="form-control" type="text" v-model="opportunityNotes">
+                                    </textarea>
+                                    <span class="error">{{ errors.opportunityNotes }}</span>
+                                </div>
+                            </div>
+                            <!--<template v-if="updateState">
+                    <div class="col-sm-6">
+                        <label class="col-sm-4">Active: </label>
+                        <div class="col-sm-8">
+                            <button class="btn btn-default" v-on:click="active = !active">
+                                <div v-if="active">
+                                    <i class="fa fa-thumbs-up"> Active</i>
+                                </div>
+                                <template v-else>
+                                    <i class="fa fa-thumbs-down"> Inactive</i>
+                                </template>
+                            </button>
+                        </div>
+
+                    </div>
+                </template>-->
+
+                            <div class="form-group"></div>
+                            <div class="col-sm-6">
+                                <button class="btn btn-primary" v-on:click="onSubmit" :disabled="isDisabled"><i class="fa fa-pencil"></i> {{ updateState ? 'Update' : 'Add'}}</button>
+                                <button class="btn btn-danger" v-on:click="clearForm"><i class="fa fa-times"></i> Cancel</button>
+                            </div>
+
+                            <div class="form-group"></div>
+                        </div>
+                    </div>
+                </template>
+                <template>
+                    <input type="checkbox" checked data-toggle="toggle" data-onstyle="success" data-offstyle="danger" data-on="Active" data-off="Inactive">
+                </template>
+                <div class="form-group"></div>
+            </div> <!-- div row addbutton-->
             <template>
                 <div class="scrollBar">
                     <table>
