--- a/SogetiStaffingPlanner/Views/User/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/User/Index.cshtml
@@ -4,71 +4,76 @@
     <script type="text/javascript" src="../../Scripts/App/User/requests.js"></script>
     <h2>User List</h2>
     <hr />
-    <div v-if="states.addState == false" class="addButton">
-        <button v-on:click="add" class="btn btn-primary">
-            <i class="fa fa-pencil"></i> Add User
-        </button>
-        <div class="form-group"></div>
-    </div>
-    <template v-else>
-        <div class="addButton">
-            <div class="form-horizontal">
-                <label class="col-sm-3" for="clientName">Name: </label>
-                <div class="col-sm-4">
-                    <input class="form-control" type="text" v-model="formData.name" />
-                    <span class="error">{{ errors.name }}</span>
-                </div>
-                <div class="form-group"></div>
+    <div class="row addButton">
+        <div v-if="states.addState == false" class="col-md-2">
+            <button v-on:click="add" class="btn btn-primary">
+                <i class="fa fa-pencil"></i> Add User
+            </button>
+            <div class="form-group"></div>
+        </div>
+        <template v-else>
+            <div class="addButton">
+                <div class="form-horizontal">
+                    <label class="col-sm-3" for="clientName">Name: </label>
+                    <div class="col-sm-4">
+                        <input class="form-control" type="text" v-model="formData.name" />
+                        <span class="error">{{ errors.name }}</span>
+                    </div>
+                    <div class="form-group"></div>
 
-                <label class="col-sm-3"> Permission: </label>
-                <div class="col-sm-4">
-                    <select class="form-control" v-model="formData.permission">
-                        <option v-for="permission in dropDowns.permissions" :value="permission.PermissionRoleId">{{ permission.PermissionRoleName }}</option>
-                    </select>
-                    <span class="error">{{ errors.permission }}</span>
+                    <label class="col-sm-3"> Permission: </label>
+                    <div class="col-sm-4">
+                        <select class="form-control" v-model="formData.permission">
+                            <option v-for="permission in dropDowns.permissions" :value="permission.PermissionRoleId">{{ permission.PermissionRoleName }}</option>
+                        </select>
+                        <span class="error">{{ errors.permission }}</span>
+                    </div>
+                    <div class="form-group"></div>
+                    <label class="col-sm-3" for="clientSubbusiness"> Role: </label>
+                    <div class="col-sm-4">
+                        <select class="form-control" v-model="formData.role">
+                            <option v-for="role in dropDowns.roles" :value="role.ViewRoleId">{{ role.ViewName }}</option>
+                        </select>
+
+                        <span class="error">{{ errors.role }}</span>
+                    </div>
+                    <div class="form-group"></div>
+                    <button class="btn btn-primary"
+                            v-on:click="onSubmit"
+                            :disabled="isDisabled">
+                        <i class="fa fa-pencil"></i> {{ states.updateState ? 'Update' : 'Add' }}
+                    </button>
+                    <button class="btn btn-danger" v-on:click="cancel"><i class="fa fa-times"></i> Cancel</button>
+                    <div class="form-group"></div>
                 </div>
-                <div class="form-group"></div>
-                <label class="col-sm-3" for="clientSubbusiness"> Role: </label>
-                <div class="col-sm-4">
-                    <select class="form-control" v-model="formData.role">
-                        <option v-for="role in dropDowns.roles" :value="role.ViewRoleId">{{ role.ViewName }}</option>
-                    </select>
-                   
-                    <span class="error">{{ errors.role }}</span>
-                </div>
-                <div class="form-group"></div>
-                <button class="btn btn-primary" 
-                        v-on:click="onSubmit"
-                        :disabled="isDisabled"
-                >
-                <i class="fa fa-pencil"></i> {{ states.updateState ? 'Update' : 'Add' }}
-                </button>
-                <button class="btn btn-danger" v-on:click="cancel"><i class="fa fa-times"></i> Cancel</button>
-                <div class="form-group"></div>
             </div>
-        </div>
-    </template>
-    <template>
-        <div class="scrollBar">
-            <table id="clientView">
-                <tr>
-                    <th>Name</th>
-                    <th>Permission</th>
-                    <th>Role</th>
-                    <th>Edit</th>
-                </tr>
-                <tr v-for="(user, index) in users">
-                    <td v-if="index == selected" class="selected"> {{ user.FullName }} </td>
-                    <td v-else>{{ user.FullName }}</td>
-                    <td v-if="index == selected" class="selected"> {{ getPermissionName(user.PermissionRoleId) }} </td>
-                    <td v-else>{{ getPermissionName(user.PermissionRoleId) }}</td>
-                    <td v-if="index == selected" class="selected"> {{ getRoleName(user.ViewRoleId) }} </td>
-                    <td v-else>{{ getRoleName(user.ViewRoleId) }}</td>
-                    <td><button class="btn btn-success" v-on:click="edit(user)"><i class="fa fa-edit"></i></button></td>
-                </tr>
-            </table>
-        </div>
-    </template>
+        </template>
+        <template>
+            <input type="checkbox" checked data-toggle="toggle" data-onstyle="success" data-offstyle="danger" data-on="Active" data-off="Inactive">
+        </template>
+        <div class="form-group"></div>
+    </div> <!-- div row addbutton-->
+<template>
+    <div class="scrollBar">
+        <table id="clientView">
+            <tr>
+                <th>Name</th>
+                <th>Permission</th>
+                <th>Role</th>
+                <th>Edit</th>
+            </tr>
+            <tr v-for="(user, index) in users">
+                <td v-if="index == selected" class="selected"> {{ user.FullName }} </td>
+                <td v-else>{{ user.FullName }}</td>
+                <td v-if="index == selected" class="selected"> {{ getPermissionName(user.PermissionRoleId) }} </td>
+                <td v-else>{{ getPermissionName(user.PermissionRoleId) }}</td>
+                <td v-if="index == selected" class="selected"> {{ getRoleName(user.ViewRoleId) }} </td>
+                <td v-else>{{ getRoleName(user.ViewRoleId) }}</td>
+                <td><button class="btn btn-success" v-on:click="edit(user)"><i class="fa fa-edit"></i></button></td>
+            </tr>
+        </table>
+    </div>
+</template>
 
 </div>
 
